# sciwin

./: CHANGELOG.md  CITATION.cff  Cargo.toml  README.md  dist-workspace.toml
.github/: build-setup.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  bundle.yml  clippy.yml  cwl.yml  docs.yml  draft-pdf.yml  tarpaulin.yml
docs/: astro.config.mjs  package-lock.json  package.json
docs/public/: get_s4n.ps1  get_s4n.sh
docs/src/assets/commands/: s4n_help.txt
docs/src/content/docs/: index.mdx
docs/src/content/docs/examples/: advanced-example.mdx  corn-prediction-example.mdx  getting-started.mdx  index.mdx  tool-creation.mdx
docs/src/content/docs/getting-started/: development.mdx  index.mdx  installation.mdx
docs/src/content/docs/reference/: index.mdx  init.mdx  list.mdx
paper/: paper.bib  paper.md
testdata/: echo_inline.py  mkdir_wf.cwl  test-wf_features_alt.cwl
testdata/hello_world/: requirements.txt
testdata/packed/: main_packed.cwl
