[workspace]
members = [
    "packages/cli",
    "packages/core",
    "packages/cwl",
    "packages/cwl_annotation",
    "packages/cwl_core",
    "packages/cwl_execution",
    "packages/reana",
    "packages/repository",
    "packages/util",
    "packages/test_utils", 
    "packages/remote_execution", 
    "packages/gui",
]
resolver = "3"

[patch.crates-io]
# https://github.com/rscarson/rustyscript/pull/396
rustyscript = {git = "https://github.com/Foorack/rustyscript", branch="upgrade-deno"}

[workspace.package]
version = "1.2.0"
edition = "2024"
repository = "https://github.com/fairagro/sciwin"
license = "MIT OR Apache-2.0"
authors = [
    "Jens Krumsieck",
    "Antonia Leidel",
    "Harald von Waldow",
    "Patrick König",
    "Xaver Stiensmeier",
]

[workspace.dependencies]
anyhow = "1.0.102"
colored = "3.1.1"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
fancy-regex = "0.17.0"
git2 = { version = "0.20.4", features = ["vendored-openssl"] }
keyring = { version = "3.6.3", features = [
    "apple-native",
    "linux-native",
    "windows-native",
] }
log = "0.4.29"
pathdiff = "0.2.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34-deprecated"
shlex = "1.3.0"
rand = "0.9.2"
reqwest = { version = "0.12.25", features = [
    "json",
    "blocking",
    "cookies",
    "rustls-tls",
    "http2",
], default-features = false }
toml = "0.9.8"
toml_edit = { version = "0.23.9", features = ["serde"] }
tempfile = "3.26.0"
tokio = { version = "1.49.0", features = ["macros"] }
urlencoding = "2.1.3"
uuid = { version = "1.21.0", features = ["v4"] }

# dev dependencies
test_utils = { path = "packages/test_utils" }
rstest = "0.26.1"
fstest = "0.3.0"
serial_test = "3.4.0"

[workspace.lints.clippy]
case_sensitive_file_extension_comparisons = "warn"
borrow_as_ptr = "warn"
format_collect = "warn"
inefficient_to_string = "warn"
large_types_passed_by_value = "warn"
manual_assert = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_string_new = "warn"
needless_pass_by_value = "warn"
option_option = "warn"
ptr_as_ptr = "warn"
wildcard_imports = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
str_split_at_newline = "warn"
unnecessary_join = "warn"
unnecessary_literal_bound = "warn"
unnecessary_semicolon = "warn"

# Dist Settings
[profile.dist]
inherits = "release"
lto = "thin"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
