[workspace]
members = [
    "packages/cli",
    "packages/core",
    "packages/reana",
    "packages/repository",
    "packages/util",
    "packages/test_utils",
    "packages/remote_execution",
    "packages/gui",
]
resolver = "3"

[workspace.package]
version = "1.2.0"
edition = "2024"
repository = "https://github.com/fairagro/sciwin"
license = "MIT OR Apache-2.0"
authors = [
    "Jens Krumsieck",
    "Antonia Leidel",
    "Harald von Waldow",
    "Patrick König",
    "Xaver Stiensmeier",
]

[workspace.dependencies]
anyhow = "1.0.102"
commonwl = { version = "0.8.1", features = ["engine"] }
colored = "3.1.1"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
dircpy = "0.3.19"
dunce = "1.0.5"
fancy-regex = "0.18.0"
git2 = { version = "0.21.0", features = ["vendored-openssl"] }
keyring = { version = "3.6.3", features = [
    "apple-native",
    "linux-native",
    "windows-native",
] }
log = "0.4.32"
pathdiff = "0.2.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
serde-saphyr = "0.0.27"
serde_yaml = "0.9.34-deprecated"
shlex = "2.0.1"
rand = "0.10.1"
reqwest = { version = "0.13.3", features = [
    "json",
    "blocking",
    "cookies",
    "http2",
], default-features = false }
toml = "1.1.2"
toml_edit = { version = "0.25.12", features = ["serde"] }
tempfile = "3.26.0"
tokio = { version = "1.51.1", features = ["macros", "rt"] }
tokio-util = "0.7.18"
urlencoding = "2.1.3"
uuid = { version = "1.23.2", features = ["v4"] }

# dev dependencies
test_utils = { path = "packages/test_utils" }
rstest = "0.26.1"
fstest = "0.4.0"
serial_test = "3.5.0"

[workspace.lints.clippy]
case_sensitive_file_extension_comparisons = "warn"
borrow_as_ptr = "warn"
format_collect = "warn"
inefficient_to_string = "warn"
large_types_passed_by_value = "warn"
manual_assert = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_string_new = "warn"
needless_pass_by_value = "warn"
option_option = "warn"
ptr_as_ptr = "warn"
wildcard_imports = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
str_split_at_newline = "warn"
unnecessary_join = "warn"
unnecessary_literal_bound = "warn"
unnecessary_semicolon = "warn"

# Dist Settings
[profile.dist]
inherits = "release"
lto = "thin"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
